# spin1_beam_model

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  README.rst  cst_processing.py  jones_matrix_field.py  plotting.py  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
src/spin1_beam_model/: cst_processing.py  jones_matrix_field.py  plotting.py
tests/: conftest.py  test_skeleton.py
